test/error/ast/ArrayLenLess1.mod
MODULE ArrayLenLess1;
TYPE A = ARRAY 0 OF INTEGER;
END ArrayLenLess1.
